Fix text alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,7 +83,7 @@ a:focus{
 	font-weight:300;
 	font-size:16px;
 	width: 300px;
-	text-align:left;
+	text-align:justify;
 	line-height:30px;
 }
 
